@@ -1,3 +1,6 @@
+Wed May 20 18:34:45 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/sql2tds.c: fix blob1 test
+
 Wed May 20 18:27:49 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/unittests/blob1.c:
 	- allow easy extension and add some type check
@@ -1550,4 +1553,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2788 2009-05-20 16:27:57 freddy77 Exp $
+$Id: ChangeLog,v 1.2789 2009-05-20 16:34:52 freddy77 Exp $
